--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -17,6 +17,6 @@
         android:title="PowerPi objects"
         android:summary="Set your configured objects as comma-separated list of names as given in the PowerPi web interface."
         android:inputType="textNoSuggestions"
-        android:defaultValue="Schreibtischlampe, Stehlampe, Ecklampe, Nachttischlampe, Schrank, Kugel"
+        android:defaultValue="Nachttischlampe, Schrank, Kugel, Schreibtischlampe, Stehlampe, Ecklampe"
         android:enabled="true" />
 </PreferenceScreen>
